...
          }}
        />
        <Tabs.Screen
          name="record"
          options={{
            title: t('record'),
            tabBarButtonTestID: 'tab-record',
            tabBarIcon: ({ color, size }) => (
              <PenLine size={28} color={color} strokeWidth={2} />
            ),
          }}
        />
        <Tabs.Screen
          name="insights"
          options={{
            lazy: true,
            title: t('insights'),
            tabBarButtonTestID: 'tab-insights',
            tabBarIcon: ({ color, size }) => (
              <BarChart2 size={28} color={color} strokeWidth={2} />
            ),
          }}
        />      </Tabs>
  );
...
