...
  );

  const content = avatarContent();

  if (onPress) {
    return (
      <TouchableOpacity onPress={onPress} style={[styles.container, style]} testID="avatar">
        {content}
      </TouchableOpacity>
    );
  }

  return (
...
